static/css/syntax.css
/* Dracula-inspired syntax theme for Chroma */
.chroma {
  color: #f8f8f2;
  background-color: var(--color-bg-raised);
}
.chroma .err {
  color: #ff5555;
}
.chroma .lnlinks {
  outline: none;
  text-decoration: none;
  color: inherit;
}
.chroma .lntd {
  vertical-align: top;
  padding: 0;
  margin: 0;
  border: 0;
}
.chroma .lntable {
  border-spacing: 0;
  padding: 0;
  margin: 0;
  border: 0;
}
.chroma .hl {
  background-color: rgba(98, 114, 164, 0.2);
}
.chroma .lnt {
  white-space: pre;
  -webkit-user-select: none;
  user-select: none;
  margin-right: 0.4em;
  padding: 0 0.4em 0 0.4em;
  color: #6272a4;
}
.chroma .ln {
  white-space: pre;
  -webkit-user-select: none;
  user-select: none;
  margin-right: 0.4em;
  padding: 0 0.4em 0 0.4em;
  color: #6272a4;
}
.chroma .line {
  display: flex;
}
.chroma .k {
  color: #ff79c6;
}
.chroma .kc {
  color: #ff79c6;
}
.chroma .kd {
  color: #8be9fd;
  font-style: italic;
}
.chroma .kn {
  color: #ff79c6;
}
.chroma .kp {
  color: #ff79c6;
}
.chroma .kr {
  color: #ff79c6;
}
.chroma .kt {
  color: #8be9fd;
}
.chroma .na {
  color: #50fa7b;
}
.chroma .nb {
  color: #8be9fd;
  font-style: italic;
}
.chroma .nc {
  color: #50fa7b;
}
.chroma .no {
  color: #8be9fd;
}
.chroma .nd {
  color: #50fa7b;
}
.chroma .ni {
  color: #f1fa8c;
}
.chroma .ne {
  color: #50fa7b;
}
.chroma .nf {
  color: #50fa7b;
}
.chroma .nl {
  color: #8be9fd;
  font-style: italic;
}
.chroma .nn {
  color: #f8f8f2;
}
.chroma .nt {
  color: #ff79c6;
}
.chroma .nv {
  color: #8be9fd;
  font-style: italic;
}
.chroma .s {
  color: #f1fa8c;
}
.chroma .sa {
  color: #f1fa8c;
}
.chroma .sb {
  color: #f1fa8c;
}
.chroma .sc {
  color: #f1fa8c;
}
.chroma .dl {
  color: #f1fa8c;
}
.chroma .sd {
  color: #f1fa8c;
}
.chroma .s2 {
  color: #f1fa8c;
}
.chroma .se {
  color: #f1fa8c;
}
.chroma .sh {
  color: #f1fa8c;
}
.chroma .si {
  color: #f1fa8c;
}
.chroma .sx {
  color: #f1fa8c;
}
.chroma .sr {
  color: #f1fa8c;
}
.chroma .s1 {
  color: #f1fa8c;
}
.chroma .ss {
  color: #f1fa8c;
}
.chroma .m {
  color: #bd93f9;
}
.chroma .mb {
  color: #bd93f9;
}
.chroma .mf {
  color: #bd93f9;
}
.chroma .mh {
  color: #bd93f9;
}
.chroma .mi {
  color: #bd93f9;
}
.chroma .il {
  color: #bd93f9;
}
.chroma .mo {
  color: #bd93f9;
}
.chroma .o {
  color: #ff79c6;
}
.chroma .ow {
  color: #ff79c6;
}
.chroma .p {
  color: #f8f8f2;
}
.chroma .c {
  color: #6272a4;
}
.chroma .ch {
  color: #6272a4;
}
.chroma .cm {
  color: #6272a4;
}
.chroma .c1 {
  color: #6272a4;
}
.chroma .cs {
  color: #6272a4;
}
.chroma .cp {
  color: #ff79c6;
}
.chroma .cpf {
  color: #6272a4;
}
.chroma .gd {
  color: #ff5555;
}
.chroma .ge {
  font-style: italic;
}
.chroma .gi {
  color: #50fa7b;
}
.chroma .gs {
  font-weight: bold;
}
.chroma .gu {
  color: #6272a4;
  font-weight: bold;
}

